# codebase_indexing

./: .env.example  .gitignore  cursor_codebase_indexing.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
config/: config.yaml
native/: Cargo.toml  index.d.ts
native/src/: hasher.rs  lib.rs  merkle.rs  scanner.rs
src/: cli.ts  indexer.ts  types.ts
src/chunker/: ast-chunker.ts
src/embedding/: embedder.ts
src/search/: retriever.ts
src/storage/: cache.ts  vector-store.ts
