[package]
name = "codebase-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
